--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -46,13 +46,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "page_dom = BeautifulSoup(response.text, \"html.parser\")\n",
-    "print(page_dom)"
+    "## Pobieranie opinii z kodu HTML strony\n"
    ]
   },
   {
@@ -60,21 +57,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "page_dom = BeautifulSoup(response.text, \"html.parser\")\n",
+    "print(type(page_dom))\n",
+    "opinions = page_dom.select(\"div.js_product-review\")\n",
+    "print(type(opinions))\n",
+    "opinion= opinions.pop(0)\n",
+    "print(type(opinion))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(opinion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ekstracja składowych pojedynczej opinii\n",
+    "|Składowa|Selektor|Zmienna|\n",
+    "|--------|--------|-------|\n",
+    "|id opinii|[\"data-entry-id\"]|opinion_id|\n",
+    "|autor|.user-post__author-name|author|\n",
+    "|rekomendacja|.user-post__author-recomendation|recommendation|\n",
+    "|gwiazdki|.user-post__score-count|stars|\n",
+    "|treść|.user-post__|content|\n",
+    "|lista zalet|.review-feature__title--positives ~ .review-feauture__item|pros|\n",
+    "|lista wad|.review-feature__title--negatives ~ .review-feauture__item|cons|\n",
+    "|dla ilu przydatna|.vote-yes > span|helpful|\n",
+    "|dla ilu nieprzydatna|.vote-no > span|unhelpful|\n",
+    "|data wystawienia|.user-post__published > time:nth-child(1)[\"datetime\"]|publish_date|\n",
+    "|data zakupu|.user-post__published > time:nth-child(2)[\"datetime\"]|purchase_date|"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "opinion_id = opinion[\"data...\"]\n",
+    "author = opinion.select(\"\")\n",
+    "recommendation = opinion.select(\"\")\n",
+    "stars = opinion.select(\"\")\n",
+    "content = opinion.select(\"\")\n",
+    "pros = opinion.select(\"\")\n",
+    "cons = opinion.select(\"\")\n",
+    "helpful = opinion.select(\"\")\n",
+    "unhelpful = opinion.select(\"\")\n",
+    "publish_date = opinion.select(\"\")\n",
+    "purchase_date = opinion.select(\"\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
