--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,68 @@
     "import json\n",
     "import requests\n",
     "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funkcja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract(ancestor,selektor=None,attribute=None,return_list=False):\n",
+    "    if selektor:\n",
+    "        if return_list:\n",
+    "            if attribute:\n",
+    "                return [tag[attribute].strip() for tag in ancestor.select(selektor)]\n",
+    "            return [tag.text.strip() for tag in ancestor.select(selektor)]\n",
+    "        if attribute: \n",
+    "            try:\n",
+    "                return ancestor.select_one(selektor)[attribute].strip()\n",
+    "            except TypeError:\n",
+    "                return None\n",
+    "        try: \n",
+    "            return ancestor.select_one(selektor).text.strip()\n",
+    "        except AttributeError:\n",
+    "            return None\n",
+    "    if attribute:\n",
+    "        return ancestor[attribute]\n",
+    "    return ancestor.text.strip()\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selektory składowych opinii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selectors = {\n",
+    "        \"opinion_id\" : (None,\"data-entry-id\"),\n",
+    "        \"author\" : (\".user-post__author-name\",),\n",
+    "        \"recommendation\" : (\".user-post__author-recomendation\",),\n",
+    "        \"stars\" : (\".user-post__score-count\",),\n",
+    "        \"content\" : (\".user-post__text\",),\n",
+    "        \"pros\" : (\".review-feature__title--positives ~ .review-feature__item\",None,True),\n",
+    "        \"cons\" : (\".review-feature__title--negatives ~ .review-feature__item\",None,True),\n",
+    "        \"helpful\" : (\".vote-yes > span\",),\n",
+    "        \"unhelpful\" : (\".vote-no > span\",),\n",
+    "        \"publish_date\" : (\".user-post__published > time:nth-child(1)\",\"datetime\"),\n",
+    "        \"purchase_date\" : (\".user-post__published > time:nth-child(2)\",\"datetime\"),\n",
+    "        }"
    ]
   },
   {
@@ -58,11 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_id = \"138331381\"\n",
+    "#product_id = \"138331381\"\n",
+    "product_id = \"39562616\"\n",
     "url = f\"https://www.ceneo.pl/{product_id}#tab=reviews\""
    ]
   },
@@ -75,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,17 +149,8 @@
     "    opinions = page_dom.select(\"div.js_product-review\")\n",
     "    for opinion in opinions:\n",
     "        single_opinion = {\n",
-    "        \"opinion_id\" : opinion[\"data-entry-id\"],\n",
-    "        \"author\" : opinion.select_one(\".user-post__author-name\").text.strip(),\n",
-    "        \"recommendation\" : opinion.select_one(\".user-post__author-recomendation\").text.strip(),\n",
-    "        \"stars\" : opinion.select_one(\".user-post__score-count\").text.strip(),\n",
-    "        \"content\" : opinion.select_one(\".user-post__text\").text.strip(),\n",
-    "        \"pros\" : [p.text.strip() for p in opinion.select(\".review-feature__title--positives ~ .review-feature__item\")],\n",
-    "        \"cons\" : [c.text.strip() for c in opinion.select(\".review-feature__title--negatives ~ .review-feature__item\")],\n",
-    "        \"helpful\" : opinion.select_one(\".vote-yes > span\").text.strip(),\n",
-    "        \"unhelpful\" : opinion.select_one(\".vote-no > span\").text.strip(),\n",
-    "        \"publish_date\" : opinion.select_one(\".user-post__published > time:nth-child(1)\")[\"datetime\"].strip(),\n",
-    "        \"purchase_date\" : opinion.select_one(\".user-post__published > time:nth-child(2)\")[\"datetime\"].strip(),\n",
+    "            key: extract(opinion, *value)\n",
+    "                for key,value in selectors.items()\n",
     "        }\n",
     "        all_opinions.append(single_opinion)\n",
     "    try:\n",
@@ -113,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
