--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -125,7 +125,8 @@
    "outputs": [],
    "source": [
     "#product_id = \"138331381\"\n",
-    "product_id = \"39562616\"\n",
+    "# product_id = \"39562616\"\n",
+    "product_id = input(\"Podaj kod produktu: \")\n",
     "url = f\"https://www.ceneo.pl/{product_id}#tab=reviews\""
    ]
   },
